bk_ida/gccida/c0/allocno_compare
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1079:75: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
pri1 = ( int)( ( double)( allocno_0[( __int64)v1].freq * floor_log2_wide( allocno_0[( __int64)*( int *)v1p].n_refs)) 
                                                                          ^~~~~~~~~
                                                                          allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1079:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
pri1 = ( int)( ( double)( allocno_0[( __int64)v1].freq * floor_log2_wide( allocno_0[( __int64)*( int *)v1p].n_refs)) 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1080:12: error: use of undeclared identifier 'allocno_0'
/ ( double)allocno_0[( __int64)v1].live_length 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1082:12: error: use of undeclared identifier 'allocno_0'
* ( double)allocno_0[( __int64)v1].size); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1083:75: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
pri2 = ( int)( ( double)( allocno_0[( __int64)v2].freq * floor_log2_wide( allocno_0[( __int64)v2].n_refs)) 
                                                                          ^~~~~~~~~
                                                                          allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1083:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
pri2 = ( int)( ( double)( allocno_0[( __int64)v2].freq * floor_log2_wide( allocno_0[( __int64)v2].n_refs)) 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1084:12: error: use of undeclared identifier 'allocno_0'
/ ( double)allocno_0[( __int64)v2].live_length 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/global.c:1086:12: error: use of undeclared identifier 'allocno_0'
* ( double)allocno_0[( __int64)v2].size); 
           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocno_compare/src/obj/global.o] Error 1
